--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -12761,11 +12761,9 @@ series:
         dtstart: 2022-06-06 18:00:00+02:00
         dtend: 2022-06-06 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Research Tuesday jsou setkání, kde profesionálové z oboru uživatelského výzkumu sdílí svoje zkušenosti.
-
-        Akci organizují Výzkumatky – Volné sdružení výzkumnic s odbornými zk'
-      og_title: 'Research Tuesday: Jak se žije lidem s hendikepem v digitálním světě?, Tue, Sep 6, 2022, 9:30 AM   | Meetup'
-      url: https://www.meetup.com/asociace-ux/events/287991969/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Research Tuesday: Jak se žije lidem s hendikepem v digitálním světě?'
         description: 'Asociace UX
