--- a/data/sources/dscc-cze.yaml
+++ b/data/sources/dscc-cze.yaml
@@ -25258,10 +25258,10 @@ series:
         dtstart: 2020-03-18 08:30:00+01:00
         dtend: 2020-03-18 09:30:00+01:00
   - meetupcom:
-      meta_description: 'We are thrilled to announce our first in-person meetup this year!
+      meta_description: 'We are thrilled to announce our first in-person meetup this year! This time, our meetup is part of celebrating [World Design Systems Week](designsystemsweek.com/) 🎉
 
 
-        You can look forward to two talks focused on testing in engineering and design case study about advanced '
+        You c'
       og_title: Design Systems Meetup – September 2022, Thu, Sep 22, 2022, 6:00 PM   | Meetup
       url: https://www.meetup.com/dscc_cze/events/288279099/
       ical:
@@ -25271,7 +25271,7 @@ series:
           Thursday, September 22 at 6:00 PM
 
 
-          We are thrilled to announce our first in-person meetup this year! You can look forward to two talks focused on testing in engineering and design case ...
+          We are thrilled to announce our first in-person meetup this year! This time, our meetup is part of celebrating (designsystemsweek.com/) 🎉 You can look...
 
 
           https://www.meetup.com/dscc_cze/events/288279099/'
@@ -25284,6 +25284,30 @@ series:
         url: https://www.meetup.com/dscc_cze/events/288279099/
         dtstart: 2022-09-22 18:00:00+02:00
         dtend: 2022-09-22 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Design Systems Breakfast Prague – August 2020
+        description: 'Design Systems Community Chapter Czechia
+
+          Wednesday, August 26 at 9:00 AM
+
+
+          Let''s chat about our design systems news, challenges, and questions with like-minded professionals. We can loosely discuss topics like how to approach...
+
+
+          https://www.meetup.com/dscc_cze/events/272672785/'
+        location: Gate Restaurant (Sokolovská 539, Karlín, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_272672785@meetup.com
+        url: https://www.meetup.com/dscc_cze/events/272672785/
+        dtstart: 2020-08-26 09:00:00+02:00
+        dtend: 2020-08-26 10:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
