--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -16266,13 +16266,13 @@ series:
         **Please register via Eventbrite:**
 
         **[https://www.eventbrite.com/e/engi'
-      og_title: 'Engineering-Product-Design Society Meetup #2, Wed, Sep 14, 2022, 5:30 PM   | Meetup'
+      og_title: 'Engineering-Product-Design Society Meetup #2, Thu, Sep 15, 2022, 2:30 AM   | Meetup'
       url: https://www.meetup.com/productboard-meetups/events/288202311/
       ical:
         summary: 'Engineering-Product-Design Society Meetup #2'
         description: 'Productboard Meetups
 
-          Wednesday, September 14 at 5:30 PM
+          Thursday, September 15 at 2:30 AM
 
 
           **We will talk about building a successful engineering-product-design organization from scratch.** **Please register via Eventbrite:****(https://www.e...
@@ -16286,8 +16286,32 @@ series:
         status: CONFIRMED
         uid: event_288202311@meetup.com
         url: https://www.meetup.com/productboard-meetups/events/288202311/
-        dtstart: 2022-09-14 17:30:00+02:00
-        dtend: 2022-09-14 20:30:00+02:00
+        dtstart: 2022-09-15 02:30:00+02:00
+        dtend: 2022-09-15 05:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Tech Community Summer Gathering
+        description: 'Productboard Meetups
+
+          Wednesday, August 17 at 6:00 PM
+
+
+          Productboard has been quietly growing our Brno presence for the last few months and we really enjoyed meeting the tech community.We want to continue o...
+
+
+          https://www.meetup.com/productboard-meetups/events/287756409/'
+        location: Impact Hub Brno (Cyrilská 7, Brno-střed-Trnitá, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287756409@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/287756409/
+        dtstart: 2022-08-17 18:00:00+02:00
+        dtend: 2022-08-17 21:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
