--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -11226,3 +11226,26 @@ series:
         url: https://www.meetup.com/typedb-prague/events/287490084/
         dtstart: 2022-09-01 18:30:00+02:00
         dtend: 2022-09-01 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: ' Graph Databases vs TypeDB | What You Can''t do With Graphs'
+        description: 'TypeDB Prague Engineers
+
+          Thursday, September 1 at 6:30 PM
+
+          \n**Synopsis**(https://docs.vaticle.com/docs/comparisons/graph-databases-and-typedb) have matured into mainstream technologies, used across any industry...
+
+
+          https://www.meetup.com/typedb-prague/events/287490084/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287490084@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/287490084/
+        dtstart: 2022-09-01 18:30:00+02:00
+        dtend: 2022-09-01 19:30:00+02:00
