--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -28311,3 +28311,27 @@ series:
         url: https://www.meetup.com/topmonks-caffe/events/286236196/
         dtstart: 2022-06-07 19:00:00+02:00
         dtend: 2022-06-07 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Kyberbezpečnost, včera, dnes a zítra
+        description: 'TopMonks Caffè
+
+          Tuesday, June 7 at 7:00 PM
+
+
+          Přijďte si poslechnout přednášky na téma bezpečnost. Čekají nás tři přednášky: 1. **Miroslav Hanák** (SW dev) a **Petr Novák** (R&D) (TurrisTech by CZ...
+
+
+          https://www.meetup.com/topmonks-caffe/events/286236196/'
+        location: Loft N8 Restaurant and Shisha Lounge (Nekázanka 883/8, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286236196@meetup.com
+        url: https://www.meetup.com/topmonks-caffe/events/286236196/
+        dtstart: 2022-06-07 19:00:00+02:00
+        dtend: 2022-06-07 21:00:00+02:00
