data: cron update

--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -16003,3 +16003,27 @@ series:
         url: https://www.meetup.com/gdgprague/events/288031512/
         dtstart: 2022-09-13 18:30:00+02:00
         dtend: 2022-09-13 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, September 13 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/288031512/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydcmbrb@meetup.com
+        url: https://www.meetup.com/gdgprague/events/288031512/
+        dtstart: 2022-09-13 18:30:00+02:00
+        dtend: 2022-09-13 20:30:00+02:00
