--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -16158,3 +16158,54 @@ series:
         url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/285475940/
         dtstart: 2022-05-19 18:00:00+02:00
         dtend: 2022-05-19 22:00:00+02:00
+  - meetupcom:
+      meta_description: 'Zveme Vás na další setkání přátel PHP v Praze, tentokrát v krásných prostorách CareCloud na Praze 9.
+
+
+        Náš partner si pro nás připravil zajímavé přednášky, chutné občerstven'
+      og_title: 51. sraz přátel PHP v Praze v CareCloud, Thu, Oct 6, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/pražske-srazy-přatel-php-pehapkari-cz/events/288525231/
+      ical:
+        summary: 51. sraz přátel PHP v Praze v CareCloud
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, October 6 at 6:00 PM
+
+
+          Zveme Vás na další setkání přátel PHP v Praze, tentokrát v krásných prostorách CareCloud na Praze 9. Náš partner si pro nás připravil zajímavé přednáš...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288525231/'
+        location: CareCloud CRM (U Elektry 974, Praha 9, Czech Republic 190 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288525231@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288525231/
+        dtstart: 2022-10-06 18:00:00+02:00
+        dtend: 2022-10-06 23:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Jubilejní 50. sraz přátel PHP v Praze v Livesportu
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, September 15 at 6:00 PM
+
+
+          Zveme Vás na jubilejní 50. setkání přátel PHP v Praze\, tentokrát v cool budově Livesport! Čekají nás zajímavé přednášky, networking a nebude chybět an...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288005611/'
+        location: Livesport s.r.o. (Bucharova 2928/14a, Praha-Praha 13, Czech Republic 158 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288005611@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288005611/
+        dtstart: 2022-09-15 18:00:00+02:00
+        dtend: 2022-09-15 23:55:00+02:00
