--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -26721,3 +26721,27 @@ series:
         url: https://www.meetup.com/morning-talks/events/288152824/
         dtstart: 2022-09-21 09:00:00+02:00
         dtend: 2022-09-21 10:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Kubernetes - nasazení cloud native aplikací
+        description: 'Morning Talks
+
+          Wednesday, September 21 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/kubernetes-nasazeni-cloud-native-aplikaci/ **Na co...
+
+
+          https://www.meetup.com/morning-talks/events/288152824/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152824@meetup.com
+        url: https://www.meetup.com/morning-talks/events/288152824/
+        dtstart: 2022-09-21 09:00:00+02:00
+        dtend: 2022-09-21 10:00:00+02:00
